--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,4 +1,4 @@
-.hero-heading {
+.hero-heading{
 font-weight: 900;
 font-size: 44px;
 line-height: 1.36;
@@ -50,3 +50,13 @@ letter-spacing: 0.02em;
     text-transform: uppercase;
 letter-spacing: 0.06em;
 }
+
+.sub-heading {
+font-family: 'Roboto', sans-serif;
+font-weight: bold;
+font-size: 14px;
+line-height: 1.14;
+letter-spacing: 0.03em;
+text-transform: uppercase;
+
+color: #212121;}
