--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,97 +1,207 @@
 :root {
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
   font-style: normal;
-  add-text-color: {color:#757575};
+  --main-font-color: white;}
 }
-.logo {font-family: 'Roboto', sans-serif;}
-.hero-heading{
-font-weight: 900;
-font-size: 44px;
-line-height: 1.36;
-text-align: center;
-letter-spacing: 0.06em;
-text-transform: uppercase;
-color: #ffffff;
+
+.logo {
+  font-family: "Roboto", sans-serif;
+}
+.hero-heading {
+  font-weight: 900;
+  font-size: 44px;
+  line-height: 1.36;
+  text-align: center;
+  letter-spacing: 0.06em;
+  text-transform: uppercase;
+  color: #ffffff;
 }
 .nav-link {
-font-weight: 500;
-font-size: 14px;
-line-height: 1.14;
-letter-spacing: 0.02em;
-text-decoration: none;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
+  text-decoration: none;
 }
 .nav-link:hover,
 .nav-link:focus {
-color: #2196f3;
+  color: #2196f3;
 }
 .nav-link-item {
-list-style: none;
-text-decoration: none;
+  list-style: none;
+  text-decoration: none;
 }
 
 .contact-list-item {
-list-style: none;
-text-decoration: none;
+  list-style: none;
+  text-decoration: none;
 }
 .contact-data {
-list-style: none;
-text-decoration: none;
-font-weight: 500;
-font-size: 14px;
-line-height: 1.14;
-letter-spacing: 0.02em;
+  list-style: none;
+  text-decoration: none;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
 }
 .contact-data:hover,
 .contact-data:focus {
-color: #2196f3;
+  color: #2196f3;
 
-.button:hover,
-.button:focus {
-background: #2196F3;
-color: #FFFFFF;
-text-transform: uppercase;
-letter-spacing: 0.06em;
+  .button:hover,
+  .button:focus {
+    background: #2196f3;
+    color: #ffffff;
+    text-transform: uppercase;
+    letter-spacing: 0.06em;
+  }
+
+  .sub-heading {
+    font-weight: bold;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: #212121;
+  }
+  .abt-img {
+    list-style: none;
+    text-decoration: none;
+  }
+  .about-image-icon {
+    list-style: none;
+}
+  .about-us-section {
+    list-style: none;
+    text-decoration: none;
+  }
 }
 
-.sub-heading {
-font-weight: bold;
-font-size: 14px;
-line-height: 1.14;
-letter-spacing: 0.03em;
-text-transform: uppercase;
-color: #212121;}
-
-.abt-img {
-list-style: none;
-text-decoration: none;
-}
-
-.abt-text{
-font-weight: normal;
-font-size: 14px;
-line-height: 1.72;
-letter-spacing: 0.03em;
-color: #757575;
+.abt-text {
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 1.72;
+  letter-spacing: 0.03em;
+  color: #757575;
 }
 
 .activity-header {
+  font-weight: bold;
+  font-size: 36px;
+  line-height: 1.16;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: #212121;
+}
+ .activity-list-item {
+  list-style: none;
+}
+.activity-subh-r {
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 1.14;
+  text-align: center;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  var (--main-font-color);}
+ 
+  .team-list {
+  list-style:none;
+  }
+  .team-section-name {
+   font-weight: bold;
+   font-size: 36px;
+   line-height: 42px;
+   text-align: center;
+   letter-spacing: 0.03em;
+   color: #212121; 
+  }
+  .team-section {
+  background: #E5E5E5;
+  }
+
+  .team-subheader {
+
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 19px;
+    text-align: center;
+    letter-spacing: 0.03em;
+    color: #212121;
+  }
+  .profession {
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 19px;
+    text-align: center;
+    letter-spacing: 0.03em;
+    color: #757575;
+  }
+
+  .social-link:hover,
+  .social-link:focus {
+  color: #2196f3
+  ;}
+
+  .clients-list {
+    list-style: none;
+  }
+ .clients-header {
 font-weight: bold;
 font-size: 36px;
-line-height: 1.16;
+line-height: 42px;
 text-align: center;
 letter-spacing: 0.03em;
 color: #212121;
-}
 
-.activity-item{
-position: absolute;
-width: 370px;
-height: 70px;
-left: 215px;
-top: 1435px;
-background: rgba(47, 48, 58, 0.8);
-}
-.activity-item:hover,
-.activity-item:focus{
- color: rgba(47, 48, 58, 0.8);
+ }
+
+ .client-icon:hover,
+ .client-icon:focus {
+  color: #2196f3
+  ;}
+  .products-list {
+  list-style: none;
+  }
+  .products-button {
+  list-style: none;
+  }
+  
+  .products-button:hover,
+  .products-button:focus {
+  color: #2196f3
+  ;}
+  .products-button {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 26px;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: #FFFFFF;
+  }
+ .product-item:hover,
+ .product-item:focus {
+  color: rgba(33, 150, 243, 0.9);
+  }
+ 
+  .products-list-main {
+  list-style: none;
+ }
+ .product-link {
+ text-decoration: none;
+ }
+ .product-header {
+font-weight: bold;
+font-size: 18px;
+line-height: 2;
+letter-spacing: 0.06em;
+color: #212121;
+ }
+.product-subheader {
+font-weight: normal;
+font-size: 16px;
+line-height: 1.87;
+letter-spacing: 0.03em;
+color: #757575;
+ }
 
