--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -47,7 +47,7 @@
 .contact-data:hover,
 .contact-data:focus {
   color: #2196f3;
-
+}
   .button:hover,
   .button:focus {
     background: #2196f3;
@@ -74,7 +74,7 @@
     list-style: none;
     text-decoration: none;
   }
-}
+
 
 .abt-text {
   font-weight: normal;
@@ -211,6 +211,9 @@ font-weight: normal;
 font-size: 18px;
 line-height: 28px;
 letter-spacing: 0.03em;
-color: #FFFFFF;
-background: rgba(33, 150, 243, 0.9);
+color: #FFFFFF;;
+}
+.product-text:hover,
+.product-text:focus {
+  background: rgba(33, 150, 243, 0.9)
 }
